--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>SKU Scanner App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -25,6 +26,25 @@
   </style>
 </head>
 <body class="bg-light">
+
+<!-- 🔐 Login Screen -->
+<div id="login-screen" class="container py-5">
+  <h3 class="text-center mb-3">🔐 Enter Your Details</h3>
+  <div class="card p-4 shadow-sm">
+    <div class="mb-3">
+      <label for="username" class="form-label">Name</label>
+      <input type="text" id="username" class="form-control" placeholder="Enter your name">
+    </div>
+    <div class="mb-3">
+      <label for="location" class="form-label">Location</label>
+      <input type="text" id="location" class="form-control" placeholder="Enter location">
+    </div>
+    <button class="btn btn-primary w-100" onclick="submitLogin()">Start Scanning 开始扫描</button>
+  </div>
+</div>
+
+<!-- 📦 Main App -->
+<div id="main-app" class="d-none">
   <div class="container py-3">
 
     <h3 class="text-center mb-3">📦 SKU Scanner</h3>
@@ -43,7 +63,7 @@
           <label for="quantity" class="form-label">Quantity</label>
           <input type="number" id="quantity" class="form-control" min="1">
         </div>
-        <button class="btn btn-primary w-100" onclick="addEntry()">Add to List 添加到列表 </button>
+        <button class="btn btn-primary w-100" onclick="addEntry()">Add to List 添加到列表</button>
         <button class="btn btn-secondary w-100 mt-2" onclick="rescan()">🔁 Rescan 重新扫描</button>
       </div>
     </div>
@@ -65,27 +85,56 @@
       </div>
     </div>
 
-    <!-- Export Button -->
+    <!-- Export and Clear Buttons -->
     <div class="mt-3">
-      <button class="btn btn-success w-100" onclick="exportToExcel()">⬇️ Export to Excel 数据导出</button>
+      <button class="btn btn-success w-100 mb-2" onclick="exportToExcel()">⬇️ Export to Excel 数据导出</button>
+      <button class="btn btn-danger w-100" onclick="clearEntries()">🗑️ Clear All Entries 清空所有记录</button>
     </div>
-  </div>
 
-  <script>
+  </div>
+</div>
+
+<script>
   let lastScannedSKU = '';
   let entries = [];
+  let userName = '';
+  let userLocation = '';
 
   const html5QrCode = new Html5Qrcode("reader");
 
   const qrConfig = {
-    fps: 15, // higher FPS
+    fps: 15,
     qrbox: { width: 250, height: 250 },
     aspectRatio: 1.0,
     rememberLastUsedCamera: true,
     experimentalFeatures: {
-      useBarCodeDetectorIfSupported: true // improves performance on supported browsers
+      useBarCodeDetectorIfSupported: true
     }
   };
+
+  function submitLogin() {
+    const name = document.getElementById("username").value.trim();
+    const location = document.getElementById("location").value.trim();
+
+    if (!name || !location) {
+      alert("Please enter both name and location.");
+      return;
+    }
+
+    userName = name;
+    userLocation = location;
+
+    // Load saved entries from localStorage
+    const saved = localStorage.getItem("sku_entries");
+    if (saved) {
+      entries = JSON.parse(saved);
+      updateTable();
+    }
+
+    document.getElementById("login-screen").classList.add("d-none");
+    document.getElementById("main-app").classList.remove("d-none");
+    startScanner();
+  }
 
   function startScanner() {
     Html5Qrcode.getCameras().then(cameras => {
@@ -104,7 +153,6 @@
           handleScan(qrMessage);
         },
         errorMessage => {
-          // Optional: show scan errors in console or a message
           // console.warn("Scan error", errorMessage);
         }
       ).catch(err => {
@@ -132,8 +180,10 @@
       alert("Enter a valid quantity.");
       return;
     }
-    entries.push({ sku: lastScannedSKU, quantity: qty });
+
+    entries.push({ name: userName, location: userLocation, sku: lastScannedSKU, quantity: qty });
     updateTable();
+    saveEntries();
     document.getElementById('form-section').classList.add('d-none');
     html5QrCode.resume();
   }
@@ -156,13 +206,36 @@
     });
   }
 
+  function saveEntries() {
+    localStorage.setItem("sku_entries", JSON.stringify(entries));
+  }
+
+  function clearEntries() {
+    const confirm1 = confirm("Are you sure you want to clear all entries?");
+    if (!confirm1) return;
+
+    const confirm2 = confirm("⚠️ This action is irreversible. Confirm again?");
+    if (!confirm2) return;
+
+    entries = [];
+    saveEntries();
+    updateTable();
+  }
+
   function exportToExcel() {
     if (entries.length === 0) {
       alert("No entries to export.");
       return;
     }
 
-    const worksheet = XLSX.utils.json_to_sheet(entries);
+    const enrichedEntries = entries.map(item => ({
+      Name: item.name,
+      Location: item.location,
+      SKU: item.sku,
+      Quantity: item.quantity
+    }));
+
+    const worksheet = XLSX.utils.json_to_sheet(enrichedEntries);
     const workbook = XLSX.utils.book_new();
     XLSX.utils.book_append_sheet(workbook, worksheet, "Entries");
 
@@ -172,13 +245,18 @@
     const url = window.URL.createObjectURL(blob);
     const anchor = document.createElement("a");
     anchor.href = url;
-    anchor.download = "sku_entries.xlsx";
+
+    // 📁 Format filename: name_location_YYYY-MM-DD.xlsx
+    const today = new Date().toISOString().split('T')[0];
+    const safeName = userName.replace(/\s+/g, '_');
+    const safeLocation = userLocation.replace(/\s+/g, '_');
+    anchor.download = `${safeName}_${safeLocation}_${today}.xlsx`;
+
     document.body.appendChild(anchor);
     anchor.click();
     document.body.removeChild(anchor);
     window.URL.revokeObjectURL(url);
   }
-
-  // Start scanner on page load
-  window.addEventListener("load", startScanner);
 </script>
+</body>
+</html>
